<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="ru.agalking.mykotlintestapp.utils.DataBindingAdaptersKt" />

        <variable
            name="viewModel"
            type="ru.agalking.mykotlintestapp.views.loginflow.LoginFlowViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.loginflow.SignInFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/sign_in"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_first_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="42dp"
        android:hint="@string/first_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:shapeAppearanceOverlay="@style/TextInputLayoutStyle"
        app:errorEnabled="true"
        app:errorText="@{viewModel.firstNameErrorMessage}" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@={viewModel.currentUser.firstName}" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_last_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="42dp"
        android:hint="@string/last_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_first_name"
        app:shapeAppearanceOverlay="@style/TextInputLayoutStyle"
        app:errorEnabled="true"
        app:errorText="@{viewModel.lastNameErrorMessage}" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@={viewModel.currentUser.lastName}" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="42dp"
        android:hint="@string/email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_last_name"
        app:shapeAppearanceOverlay="@style/TextInputLayoutStyle"
        app:errorEnabled="true"
        app:errorText="@{viewModel.emailErrorMessage}" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.currentUser.email}" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="42dp"
        android:backgroundTint="@color/blue"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_email"
        app:layout_constraintVertical_bias="0.41" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_input_email"
        app:layout_constraintTop_toBottomOf="@+id/text_input_email"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/login_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="58dp"
        android:layout_height="34dp"
        android:padding="0dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>